[metadata]
name = sse_example
version = attr:sse_example.VERSION
description = A SSE python/tornado based example
long_description = file: README.md
author = Simone Pierazzini
author_email = makeroo@gmail.com
url = https://github.com/makeroo/sse_example.git
license =
platforms = any
classifiers =
    Development Status :: 1
    Programming Language :: Python 3

[options]
packages = find:
python_requires = >= 3.11, < 3.13
include_package_data = True
install_requires =
    tornado >= 6.4, < 7
    click >= 8.1.7, < 9

[options.entry_points]
console_scripts =
    sse_example=sse_example.app:main
